discussion/kv_engine/83847/83847_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

[1/n] MB-25920: Implement pause-resume capability in sequence list purge

EphTombstoneStaleItemDeleter task can have very long runtimes at both
on average and at tail end. The issue with that is not necessarily the
duration of the task itself; but it will block the other tasks in the
same class (NonIO) from running.

The biggest chunk of work performed by the task is iterating through
the entire sequence list and deleting stale items. This commit
adds capability to pause the tombstone purging while iterating through
the list and to resume purging from the paused point when purge is
called next.

And since purger tasks and snapshotted range read tasks are exclusive,
the snapshotted range reads should not have a problem.

(Periodic pause-resume at the task level will be implemented in the
 following commits)

Change-Id: I07e44b081348b568b2ec644f14966c3dc4bc095a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Manu Dhundi
Date: 2017-10-04 18:57:22.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2017-10-04 19:36:01.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-linux-master/2931/ : FAILURE

Failure of a CTest test 15/81 MemCheck #61: memcached-legacy-plain-tests ................... ( http://cv.jenkins.couchbase.com/job/kv_engine-linux-master/2931/ )

http://cv.jenkins.couchbase.com/job/kv_engine-addresssanitizer-master/2794/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/2630/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format/1473/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-threadsanitizer-master/2912/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/2930/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2017-10-04 20:50:20.000000000
Message: 
Patch Set 6: Verified+1

Build Successful 

http://cv.jenkins.couchbase.com/job/kv_engine-addresssanitizer-master/2794/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/2630/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format/1473/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-threadsanitizer-master/2912/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/2930/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-linux-master/2932/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2017-10-05 09:52:56.000000000
Message: 
Patch Set 6: Code-Review-1

(1 comment)
Line:336, engines/ep/src/seqlist.h -> Technically this isn't true as at this level there's no default parameter.

Can't you just define the default in the base class and omit in the derived? That appears to work in local testing for me.

----------------------------------------------------------------------------------------------------------------------
Author: Manu Dhundi
Date: 2017-10-05 19:15:33.000000000
Message: 
Patch Set 6:

(1 comment)
Line:336, engines/ep/src/seqlist.h -> It does not work for me on MACOS compiler.
/Users/manu/couchbase_tree/kv_engine/engines/ep/tests/module_tests/basic_ll_test.cc:803:27: error: too few arguments to function call, expected 2, have 1; did you mean 'SequenceList::purgeTombstones'?
    EXPECT_EQ(1, basicLL->purgeTombstones(numItems + 1));
                          ^~~~~~~~~~~~~~~
                          SequenceList::purgeTombstones

I think even the standard says that:
"An overrider does not inherit default arguments".

So, to keep a clean implementation created a wrapper class.

----------------------------------------------------------------------------------------------------------------------
Author: Manu Dhundi
Date: 2017-10-06 16:39:04.000000000
Message: 
Patch Set 6:

(1 comment)
Line:336, engines/ep/src/seqlist.h -> ok

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2017-10-06 16:20:29.000000000
MISMATCHED INLINE COMMENT
Line:336, engines/ep/src/seqlist.h -> I think this is more complex than the alternative - suggest we go back to just specifying the (same) default in both virtual and override.
----------------------------------------------------------------------------------------------------------------------
